--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,19 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Firebase
+firebase-debug.log
+firebase-debug.*.log
+.firebase/
+
+# IDE
+.idea/
+.vscode/
+
+# Environnement local
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
