--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-signature-canvas": "^1.1.0-alpha.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
