--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tinymce/tinymce-react": "^6.0.0",
     "firebase": "^11.4.0",
+    "framer-motion": "^12.5.0",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
     "next": "14.1.0",
